WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62384
WebCore::WebKitCSSKeyframesRuleInternal::nameAttrSetter() - crash
https://bugs.webkit.org/show_bug.cgi?id=62384
Summary
WebCore::WebKitCSSKeyframesRuleInternal::nameAttrSetter() - crash
Julien Chaffraix
Reported
2011-06-09 10:37:42 PDT
WebKit bug for
http://code.google.com/p/chromium/issues/detail?id=84984
Patch forthcoming.
Attachments
Patch
(3.73 KB, patch)
2011-06-09 11:42 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2011-06-09 11:42:14 PDT
Created
attachment 96611
[details]
Patch
Darin Adler
Comment 2
2011-06-09 11:52:51 PDT
<
rdar://problem/9581678
>
WebKit Review Bot
Comment 3
2011-06-09 12:52:39 PDT
Comment on
attachment 96611
[details]
Patch Clearing flags on attachment: 96611 Committed
r88474
: <
http://trac.webkit.org/changeset/88474
>
WebKit Review Bot
Comment 4
2011-06-09 12:52:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug